--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,11 +206,32 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4e4ffa;}
 --------------------------------------*/
 .welcome-hero {
     position: relative;
-    background:url(../images/welcome-hero/welcome-banner.jpg)no-repeat;
+    /* background:url(../images/welcome-hero/welcome-banner.jpg)no-repeat; */
     background-position: center;
     background-size: cover;
     z-index: 1;
 }
+.video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.video-background video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+
 .welcome-hero:before {
     position: absolute;
     content: "";
