--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,15 +418,18 @@ Chat bot */
         }
 
 /*-------------------------------------
-        3.  Welcome-hero
+        3.  Welcome-hero (Optimized for Mobile)
 --------------------------------------*/
 .welcome-hero {
     position: relative;
-    /* background:url(../images/welcome-hero/welcome-banner.jpg)no-repeat; */
+    height: 100vh;
+    min-height: 500px; /* Minimal balandlik */
+    overflow: hidden;
     background-position: center;
     background-size: cover;
     z-index: 1;
 }
+
 .video-background {
     position: absolute;
     top: 0;
@@ -437,15 +440,12 @@ Chat bot */
 }
 
 .video-background video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .welcome-hero:before {
@@ -457,123 +457,120 @@ Chat bot */
     height: 100%;
     background: rgba(42,45,84,.60);
 }
-.header-area{position: absolute;top:0;left:0;width: 100%;z-index: 99;}
 
+.header-area {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    z-index: 99;
+}
 
-/*.welcome-hero-txt*/
-.welcome-hero-txt{text-align: center;padding:290px 0 372px;}
+/* Welcome Hero Text */
+.welcome-hero-txt {
+    text-align: center;
+    padding: 20vh 20px;
+    position: relative;
+    z-index: 2;
+}
+
 .welcome-hero-txt h2 {
-    font-size: 42px;
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
-    margin-bottom: 45px;
+    margin-bottom: 20px;
+    line-height: 1.3;
 }
+
 .welcome-hero-txt p {
-    font-size: 18px;
     text-transform: initial;
     color: #fff;
     font-weight: 500;
-    max-width: 735px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 auto 25px;
+    line-height: 1.5;
 }
+
 .welcome-btn {
     display: inline-block;
-    width: 230px;
-    height: 60px;
     background: #4e4ffa;
     color: #fff;
     border-radius: 3px;
-    margin-top: 55px;
-    -webkit-transition: .3s linear; 
-    -moz-transition:.3s linear; 
-    -ms-transition:.3s linear; 
-    -o-transition:.3s linear;
-    transition: .3s linear;
+    transition: all .3s linear;
+    text-decoration: none;
+    padding: 12px 25px;
 }
-.welcome-btn:hover{
+
+.welcome-btn:hover {
     background: #0102fa;
 }
-/* Welcome Hero Media Queries */
-@media (max-width: 1200px) {
+
+/* Mobile First Media Queries */
+@media (min-width: 400px) {
     .welcome-hero-txt {
-        padding: 220px 0 300px;
+        padding: 25vh 30px;
     }
     .welcome-hero-txt h2 {
-        font-size: 36px;
-        margin-bottom: 35px;
+        font-size: 24px;
+    }
+    .welcome-hero-txt p {
+        font-size: 16px;
+    }
+    .welcome-btn {
+        padding: 14px 30px;
     }
 }
 
-@media (max-width: 992px) {
+@media (min-width: 576px) {
     .welcome-hero-txt {
-        padding: 180px 0 250px;
+        padding: 30vh 40px;
+    }
+    .welcome-hero-txt h2 {
+        font-size: 28px;
+    }
+    .welcome-hero-txt p {
+        font-size: 17px;
+        max-width: 80%;
+    }
+}
+
+@media (min-width: 768px) {
+    .welcome-hero-txt {
+        padding: 35vh 50px;
     }
     .welcome-hero-txt h2 {
         font-size: 32px;
         margin-bottom: 30px;
     }
     .welcome-hero-txt p {
+        font-size: 18px;
+        max-width: 70%;
+    }
+    .welcome-btn {
+        padding: 16px 35px;
         font-size: 16px;
-        max-width: 600px;
-    }
-    .welcome-btn {
-        width: 200px;
-        height: 55px;
-        margin-top: 45px;
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 992px) {
     .welcome-hero-txt {
-        padding: 150px 0 200px;
+        padding: 40vh 60px;
     }
     .welcome-hero-txt h2 {
-        font-size: 28px;
-        margin-bottom: 25px;
+        font-size: 36px;
     }
     .welcome-hero-txt p {
-        font-size: 15px;
-        max-width: 500px;
-    }
-    .welcome-btn {
-        width: 180px;
-        height: 50px;
-        margin-top: 35px;
-        font-size: 14px;
+        max-width: 60%;
     }
 }
 
-@media (max-width: 576px) {
+@media (min-width: 1200px) {
     .welcome-hero-txt {
-        padding: 120px 0 150px;
+        padding: 45vh 80px;
     }
     .welcome-hero-txt h2 {
-        font-size: 24px;
-        margin-bottom: 20px;
-    }
-    .welcome-hero-txt p {
-        font-size: 14px;
-        max-width: 90%;
-    }
-    .welcome-btn {
-        width: 160px;
-        height: 45px;
-        margin-top: 30px;
-        font-size: 13px;
-    }
-}
-
-@media (max-width: 400px) {
-    .welcome-hero-txt {
-        padding: 100px 0 120px;
-    }
-    .welcome-hero-txt h2 {
-        font-size: 20px;
-    }
-    .welcome-btn {
-        width: 140px;
-        height: 40px;
+        font-size: 42px;
+        margin-bottom: 45px;
     }
 }
 /*.welcome-hero-txt*/
